# EDU

./: .env  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  docker-compose-prod.yml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
EDU/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
account/: admin.py  factories.py  models.py  serializer.py  serializers.py  tasks.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_user_created_at_user_updated_at.py  0003_alter_user_created_at_alter_user_gender_and_more.py  0004_alter_user_gender_alter_user_role.py
account/tests/: __init__.py  test_login.py  test_logout.py  test_reset_password.py
common/: admin.py  factories.py  models.py  serializer.py  serializers.py
common/migrations/: 0001_initial.py  0002_college_created_at_college_updated_at_and_more.py  0003_term_include_valid_years.py  (+1 more)
course/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
course_selection/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py
educational_assistance/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
it_manager/: admin.py  apps.py  factories.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
professor/: admin.py  factories.py  models.py  pdf_generator.py  permissions.py  serializer.py  serializers.py  tasks.py  urls.py  views.py
proxy/: nginx.conf
student/: admin.py  models.py  permissions.py  serializers.py  tasks.py  throtteling.py  urls.py  views.py
utils/: user_profile.py
(+31 files in other folders)
