[tool.poetry]
name = "edu"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.6"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
pillow = "^10.1.0"
django-storages = "^1.14.2"
boto3 = "^1.28.73"
djangorestframework = "^3.14.0"
redis = "^5.0.1"
model-bakery = "^1.17.0"
drf-nested-routers = "^0.93.4"
django-debug-toolbar = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
